# TeckenToSpeech

./: .gitignore  README.md
API/: pi_mockup.py
Inbyggt_system/: README.md  TETS-main.py  TETSmain.py  TETSserver.py  TeTS-main-tkinter-rewrite.py  cam_run.py  main.py  producer_frames.py  screen_handler.py  server_handler.py  startPredict.py
Inbyggt_system/old_files/: ServerCommunication.py  TETSmain.py  TETSserver.py  main.py
Inbyggt_system/pred_start/: cam_run.py  start_predict.py
Klient/TTS/app/src/main/: AndroidManifest.xml
Klient/TTS/app/src/main/java/com/example/tts/: MainActivity.kt  Post.kt  PostFetcher.kt
Klient/TTS/gradle/wrapper/: gradle-wrapper.properties
Klient/android/app/: build.gradle.kts
Klient/android/app/src/main/java/com/example/app/: MainActivity.kt  MainViewModel.kt  Post.kt  PostFetcher.kt
Klient/android/app/src/main/java/com/example/app/anslutning/: Post.kt  PostFetcher.kt
Klient/android/app/src/main/java/com/example/app/buttons/: Buttons.kt  HistoryDrawer.kt
Klient/android/app/src/main/java/com/example/app/composables/: Buttons.kt  HistoryDrawer.kt  (+1 more)
Klient/android/gradle/wrapper/: gradle-wrapper.properties
OpenCV/: CMakeLists.txt  JusteraModellByHand.py  continuedTraining.py  generate_data.py  train_model.py
OpenCV/old_files/: CMakeLists.txt
OpenCV/src/: consumer_frames.cpp  video.cpp
OpenCV/src/datagen/: generate_data.py
OpenCV/src/model_train_files/: adjust_model_by_hand.py  continued_training.py  train_model.py
Server/: APIServer.py  pi_mockup.py  placeholder.py  placeholder_threads.py
tecken_api/: main.py
(+7 files in other folders)
